syntax='proto3';

package data;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package ='./data';

message GenDataResponse{
    string data_generated =1;
}

service Data {
	rpc GenData(google.protobuf.Empty) returns (GenDataResponse) {
		option (google.api.http) = {
			get: "/gen"
      };
   }
}
